# app/Http/Controllers/PostController.php
@@ -3,13 +3,11 @@
 namespace App\Http\Controllers;
 
 use App\Http\Resources\AuthorPostsResource;
-use App\Http\Resources\PostdataResource;
+use App\Http\Resources\PostDataResource;
 use App\Models\Post;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Validation\ValidationException;
-use Symfony\Component\HttpFoundation\Response;
-
 class PostController extends Controller
 {
     /**
@@ -20,20 +18,9 @@ class PostController extends Controller
     public function index()
     {
         $Post = Post::orderBy('created_at', 'desc')->get();
-        $post_arr = $Post->map(function ($item, $key) {
-            $User = User::where('id', $item->user_id)->firstOrFail();
-            return 
-                // 'id' => $item->id,
-                // 'title' => $item->title,
-                // 'content' => substr($item->content, 0, 300),
-                // 'created_at' => $item->created_at,
-                // 'updated_at' => $item->updated_at,
-                // 'user' => [
-                //     'id' => $User->id,
-                //     'name' => $User->name
-                // ]
-                new PostdataResource($item)
-            ;
+        $post_arr = $Post->map(function ($item, $key) 
+        {
+            return new PostDataResource($item) ;
         });
         return response()->json($post_arr, 200);
     }
@@ -56,34 +43,21 @@ class PostController extends Controller
      */
     public function store(Request $request)
     {
-
         try {
-            $validResult = $request->validate([
+            $request->validate([
                 "title" => "required|string",
                 "content" => "required|string",
                 'user_id' => 'required|uuid'
             ]);
             $Post = Post::create($request->all());
-            $User = User::where('id', $request->input('user_id'))->firstOrFail();
             return response()->json([
                 'post_id' => $Post->id,
                 'message' => "Successful Created"
-                // 'title' => $Post->title,
-                // 'content' => $Post->content,
-                // 'created_at' => $Post->created_at,
-                // 'updated_at' => $Post->updated_at,
-                // 'user' => [
-                //     'id' => $User->id,
-                //     'name' => $User->name
-                // ]
-                ]
-                // new PostdataResource($Post)
-            , 201);
-            //return response()->json($Post,201);
+                ], 201);
         } catch (ValidationException $exception) {
             $errorMessage =
                 $exception->validator->getMessageBag()->getMessages();
-            return response()->json(['message' => "incorrent format"], 400);
+            return response()->json(['message' => $errorMessage], 400);
         }
     }
 
@@ -95,21 +69,7 @@ class PostController extends Controller
      */
     public function show(Post $post)
     {
-        //$User = User::where('id', $post->user_id)->firstOrFail();
-        // return response()->json([
-        //     'id' => $post->id,
-        //     'title' => $post->title,
-        //     'content' => $post->content,
-        //     'created_at' => $post->created_at,
-        //     'updated_at' => $post->updated_at,
-        //     'user' => [
-        //         'id' => $User->id,
-        //         'name' => $User->name
-        //     ]
-        // ], 200);
-        return response()->json(new PostdataResource($post), 200);
-        // return response()->json($postId);
-        // return response(['Message'=>'Post not found'], 404);
+        return response()->json(new PostDataResource($post), 200);
     }
 
     /**
@@ -132,23 +92,11 @@ class PostController extends Controller
      */
     public function update(Request $request, Post $post)
     {
-        $User = User::where('id', $post->user_id)->firstOrFail();
         $post->update($request->all());
-        //return response($post);
         return response()->json([
             'post_id' => $post->id,
             'message' => "successful update"
-            // 'title' => $post->title,
-            // 'content' => $post->content,
-            // 'created_at' => $post->created_at,
-            // 'updated_at' => $post->updated_at,
-            // 'user' => [
-            //     'id' => $User->id,
-            //     'name' => $User->name
-            // ]
-        ]
-            // new PostdataResource($post)
-        , 200);
+            ], 200);
     }
 
     /**
@@ -160,20 +108,10 @@ class PostController extends Controller
     public function destroy(Post $post)
     {
         $post->delete();
-        return response()->json(['message' => "successful delete"], 200);
+        return response()->json(['message' => "Successful delete"], 200);
     }
-    public function getPost(Request $request ,User $user){
-        //$User = User::where('id', $post->user_id)->firstOrFail();
-        // if($request->has('Id')){
-        //     $authorId=$request->query('Id');
-        //     //dd($authorId);
-        //     $author = User::find($authorId);
-        //     //dd($author);
-        //     //return response($author);
-        //     return response()->json(new AuthorPostsResource($author));
-        // }
+    public function getPost(Request $request ,User $user)
+    {
        return response()->json(new AuthorPostsResource($user));
-        // return response()->json(Post::first()->user);
-       // return response()->json(Post::with('user')->get());
     }
 }
